--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>可以成为我的恋人吗？</title>
+    <title>安棋傻瓜 ❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <img id="mainImage" src="images/heart.png" alt="爱心">
-        <h1 id="question">可以成为我的恋人吗？</h1>
+        <h1 id="question">杨安棋你喜欢我吗？</h1>
         <div class="buttons">
-            <button id="yes">可以</button>
-            <button id="no">不要</button>
+            <button id="yes">喜欢</button>
+            <button id="no">不喜欢</button>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
